# ml_digital_art

./: .dockerignore  .env.example  README.md  pyproject.toml  requirements.txt
notebooks/: artworks_classification_eda.ipynb  artworks_classification_eda_dataset.ipynb  artworks_classification_eda_images.ipynb  artworks_classification_train_01_baseline.ipynb  artworks_classification_train_01_baseline_pynb.ipynb  artworks_classification_train_02_simpler_dataset.ipynb  artworks_classification_train_03_advanced_methods.ipynb  template_artworks_classification_fastai_train.ipynb  tutorial_fastai_train_minst.ipynb  tutorial_pandas_main_concepts.ipynb  tutorial_pytorch_train_minst.ipynb  tutorial_tracking_mlflow_fastai.ipynb
notebooks/study/: neural_style_tranfer_pytorch.ipynb
notebooks/tabular/kaggle_spaceship_titanic/: eda_0001_spaceship_titanic_after_train_0001.ipynb  eda_0002_spaceship_titanic_feature_importance_after_eda_0001.ipynb  train_0001_spaceship_titanic_baseline_rf.ipynb
notebooks/tutorial/: tutorial_feature_importance_tabular_data.ipynb  tutorial_pandas_main_concepts.ipynb  tutorial_sql_advanced_concepts.ipynb  tutorial_sql_window_queries.ipynb  tutorial_tracking_mlflow_fastai.ipynb  tutorial_training_of_tabular.ipynb  tutorial_training_on_tabular_data.ipynb  tutorial_visualization_01_matplolib.ipynb  tutorial_visualization_02_seaborn.ipynb
notebooks/utils/: fastai_utils.py  mlflow_utils.py
notebooks/vision/: artworks_classification_eda_dataset.ipynb  artworks_classification_train_01_baseline.ipynb  artworks_classification_train_02_simpler_dataset.ipynb
notebooks/vision/artbench/: artworks_classification_train_03_advanced_methods.ipynb
notebooks_utils/: artworks_helpers.py  fastai_utils.py  mlflow_utils.py
reports/: artbench_dataset_ydata_report.html
