[project]
name = "digital-art-ai-agents-ml"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.16.2",
    "annotated-types==0.7.0",
    "anyio==4.9.0",
    "asttokens==3.0.0",
    "audit-alembic>=0.2.0",
    "certifi==2025.4.26",
    "comm==0.2.2",
    "contourpy==1.3.2",
    "cycler==0.12.1",
    "debugpy==1.8.14",
    "decorator==5.2.1",
    "distro==1.9.0",
    "executing==2.2.0",
    "fonttools==4.58.2",
    "h11==0.16.0",
    "httpcore==1.0.9",
    "httpx==0.28.1",
    "idna==3.10",
    "ipykernel==6.29.5",
    "ipython==9.3.0",
    "ipython-pygments-lexers==1.1.1",
    "jedi==0.19.2",
    "jiter==0.10.0",
    "jupyter-client==8.6.3",
    "jupyter-core==5.8.1",
    "kiwisolver==1.4.8",
    "matplotlib==3.10.3",
    "matplotlib-inline==0.1.7",
    "nest-asyncio==1.6.0",
    "numpy==2.2.6",
    "openai==1.84.0",
    "packaging==25.0",
    "pandas==2.3.0",
    "parso==0.8.4",
    "pexpect==4.9.0",
    "pillow==11.2.1",
    "platformdirs==4.3.8",
    "prompt-toolkit==3.0.51",
    "psutil==7.0.0",
    "psycopg2>=2.9.10",
    "ptyprocess==0.7.0",
    "pure-eval==0.2.3",
    "pydantic==2.11.5",
    "pydantic-core==2.33.2",
    "pygments==2.19.1",
    "pyparsing==3.2.3",
    "python-dateutil==2.9.0.post0",
    "python-dotenv==1.1.0",
    "pytz==2025.2",
    "pyzmq==26.4.0",
    "seaborn==0.13.2",
    "six==1.17.0",
    "sniffio==1.3.1",
    "stack-data==0.6.3",
    "tornado==6.5.1",
    "tqdm==4.67.1",
    "traitlets==5.14.3",
    "typing-extensions==4.14.0",
    "typing-inspection==0.4.1",
    "tzdata==2025.2",
    "wcwidth==0.2.13",
]

[project.scripts]
server_dev = "project.app.runner:main"
show_examples = "project.test.sample_usages:main"

[tool.setuptools.packages.find]
## since multiple folders can be seen as root project folder, this is set to avoid the error
## error: Multiple top-level packages discovered in a flat-layout
where = ["."]  # list of folders that contain the packages (["."] by default)
include = ["project"]  # package names should match these glob patterns (["*"] by default)
exclude = []  # exclude packages matching these glob patterns (empty by default)
namespaces = false  # to disable scanning PEP 420 namespaces (true by default)
